Logos spacing - fixed

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .Footer{
   background-color: rgb(42, 42, 42);
-  position: sticky;
+  /* position: sticky; */
   left: 0;
   bottom: 0 !important;
   width: 100%;
@@ -53,6 +53,10 @@
   transition: color 0.5s ease-in-out;
 }
 
+.bold{
+  font-weight: bold;
+}
+
 .OnHoverSection:hover + .Footer_Copy_Text{
   transition: color 0.5s ease-in-out;
   color: #ffb30d;
@@ -79,6 +83,11 @@
   flex-wrap: wrap;
 }
 
+.uniLogo{
+  padding: 1%;
+  padding-left: 2%;
+  padding-right: 2%;
+ }
 
 .FooterHr{
   border: 0;
